--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@ _site/
 .jekyll-cache/
 .jekyll-metadata
 
+# Node
+node_modules/
+package-lock.json
+
+# CSS Build Output
+assets/css/output.css
+
 # Ruby
 *.gem
 *.rbc
